# AI-Reader-V2

./: README.md  README_EN.md
backend/: pyproject.toml
backend/src/api/routes/: settings.py
backend/src/api/websocket/: chat_ws.py
backend/src/extraction/: context_summary_builder.py
backend/src/infra/: llm_client.py  openai_client.py
backend/src/services/: alias_resolver.py  analysis_service.py  person_knowledge_prior.py  visualization_service.py
backend/src/services/geo_skills/: tier_classifier.py
frontend/: package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/api/: client.ts  types.ts
frontend/src/components/shared/: InlineLlmSetup.tsx  SetupGuide.tsx
frontend/src/pages/: SettingsPage.tsx
