[package]
name = "ai-reader"
version = "0.71.6"
description = "AI Reader - 中文小说分析桌面应用"
authors = ["leonfeng"]
license = "AGPL-3.0"
repository = "https://github.com/mouseart2025/AI-Reader-V2"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
flate2 = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"], default-features = false }
tokio = { version = "1", features = ["time"] }
